# transparent-vpn

./: .gitignore  README.md  docker-compose.yml
keenetic/opt/etc/: crontab  dnscrypt-proxy.toml  dnsmasq.conf  shadowsocks.json
keenetic/opt/etc/ndm/ifstatechanged.d/: wg-trsp.sh
keenetic/opt/etc/ndm/netfilter.d/: 1000-wg-trsp-netfilter.sh  wg-trsp-netfilter.sh
trsp/: Cargo.toml  build.rs  docker-compose.yml
trsp/code/: Cargo.toml  build.rs  default_config.toml
trsp/code/front/: index.html  package.json  vite.config.js
trsp/code/front/src/: App.vue  main.js
trsp/code/front/src/router/: index.js
trsp/code/src/: _config.rs  main.rs  options.rs
trsp/code/src/dns/: cleaner.rs  domains.rs  domains_set.rs  handler.rs  inner_storage.rs  mod.rs  proxy_record.rs  request_set.rs  router.rs  server.rs  trsp_authority.rs
trsp/code/src/web_server/: mod.rs  routes.rs  server.rs
trsp/code/src/web_server/views/: auth.rs  mod.rs
trsp/front/: package-lock.json  package.json
trsp/front/src/: App.vue  main.js
trsp/front/static/html/: index.html
trsp/front/static/js/: app.7ed361df.js  app.7ed361df.js.map
trsp/src/: config.rs  main.rs  options.rs  settings.rs
trsp/src/dns/: blocked_domains.rs  domains.rs  domains_set.rs  handler.rs  inner_in_memory.rs  inner_storage.rs  mod.rs  proxy_record.rs  router.rs  routing.rs  server.rs  trr_key.rs  trsp_authority.rs  trsp_resolver.rs  vpn_authority.rs  vpn_catalog.rs
trsp/src/server/: mod.rs  routes.rs  server.rs  views.rs
trsp/src/web_server/: server.rs
trsp/src/web_server/views/: main.rs
