[package]
name = "trsp"
version = "0.0.1"
rust-version = "1.63"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"]}
config = "0.13"
serde = "1.0"
lazy_static = "1.4.0"
rust-embed = "6.4.1"

[dependencies.poem]
version = "1.3"
features = ["cookie", "csrf", "embed"]

[build-dependencies]
npm_rs = "0.2.1"
fs_extra = "1.2.0"

