[package]
name = "trsp"
version = "0.0.1"
rust-version = "1.63"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"]}
config = "0.13"
serde = "1.0"
lazy_static = "1.4.0"
rust-embed = "6.4.1"
trust-dns-server = {version="0.22.0", features = ["trust-dns-resolver", "dns-over-https", "dns-over-rustls"]}
#trust-dns-proto = "0.22.0"
#trust-dns-resolver = {version="0.22.0", features = ["dns-over-https"]}
async-trait = "0.1.59"
tracing = "0.1"
tracing-subscriber="0.3"
thiserror = "1.0"

[dependencies.clap]
version = "4.0.29"
features = ["derive", "env"]

[dependencies.poem]
version = "1.3"
features = ["cookie", "csrf", "embed", "session"]

[build-dependencies]
npm_rs = "0.2.1"
