[package]
name = "trsp"
version = "0.0.1"
rust-version = "1.63"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"]}
tokio-stream = "0.1"
config = "0.13"
serde = "1.0"
lazy_static = "1.4"
rust-embed = "6.4"
encoding_rs = "0.8"
regex = "1.7"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber="0.3"
# TODO: Remove this
thiserror = "1.0"
reqwest = {version = "0.11", features = ["stream"]}
futures-util = { version = "0.3.5", default-features = false, features = ["std"] }

[dependencies.clap]
version = "4.2.3"
features = ["derive", "env"]

[dependencies.poem]
version = "1.3"
features = ["cookie", "csrf", "embed", "session"]

[dependencies.trust-dns-server]
version="0.22"
features = ["trust-dns-resolver", "dns-over-https-rustls", ]


[build-dependencies]
npm_rs = "0.2"
